# PrivIoT

./: LICENSE  README.md
PrivIotShield/: ai_analyzer.py  anomaly_detection.py  app.py  cvss_calculator.py  device_fingerprinting.py  models.py  notification_service.py  openai_integration.py  pyproject.toml  report_generator.py  routes.py  security_scanner.py  vulnerability_remediation.py
PrivIotShield/code_download/: ai_analyzer.py  api.py  app.py  init_db.py  privacy_analyzer.py  report_generator.py  routes.py  security_scanner.py
PrivIotShield/code_download/static/css/: style.css
PrivIotShield/code_download/static/js/: charts.js  dashboard.js  reports.js
PrivIotShield/code_download/templates/: api_docs.html  dashboard.html  device_detail.html  index.html  layout.html  login.html  register.html
PrivIotShield/instance/: priviot.db
PrivIotShield/static/css/: modern.css  neumorphic.css  style.css
PrivIotShield/static/js/: charts.js  dashboard.js  scan.js
PrivIotShield/templates/: alerts.html  dashboard.html  devices.html  layout.html  login.html  profile.html  recommendations.html  register.html  remediation.html  report_detail.html  reports.html  scan.html  scan_detail.html
PrivIotShield/templates/errors/: 403.html  404.html  500.html
